--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "effortless-design",
   "version": "1.0.0",
   "scripts": {
-    "play": "pnpm -F @effortless-design/play play"
+    "play": "pnpm -F @effortless-design/play play",
+    "prepare": "husky install"
   },
   "author": "Lrk",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^17.6.1",
+    "@commitlint/config-conventional": "^17.6.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.39.0",
@@ -14,6 +17,7 @@
     "eslint-plugin-markdown": "2.0.0-rc.2",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
+    "husky": "^8.0.3",
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vue-eslint-parser": "^9.1.1"
