--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "vue-eslint-parser": "^9.1.1"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx,md,json,vue}": [
+      "eslint --fix"
+    ]
   }
 }
