--- a/package.json
+++ b/package.json
@@ -3,24 +3,30 @@
   "version": "1.0.0",
   "scripts": {
     "play": "pnpm -F @effortless-design/play play",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "docs:dev": "vitepress dev docs",
+    "docs:build": "vitepress build docs",
+    "docs:preview": "vitepress preview docs"
   },
   "author": "Lrk",
   "license": "MIT",
   "devDependencies": {
+    "@algolia/client-search": "^4.17.0",
     "@commitlint/cli": "^17.6.1",
     "@commitlint/config-conventional": "^17.6.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-markdown": "2.0.0-rc.2",
+    "eslint-plugin-markdown": "3.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.8",
     "typescript": "^5.0.2",
+    "vitepress": "1.0.0-alpha.73",
+    "vue": "^3.2.47",
     "vue-eslint-parser": "^9.1.1"
   },
   "lint-staged": {
