--- a/play/package.json
+++ b/play/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@effortless-design/components": "workspace:^1.0.0",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
     "vue": "^3.2.47"
   },
