feat(component): icon complete

--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@effortless-design/icons": "workspace:^1.0.0",
+    "@effortless-design/theme": "workspace:^1.0.0",
     "@effortless-design/utils": "workspace:^1.0.0"
   }
 }
