--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,9 @@
   "plugins": ["vue", "@typescript-eslint", "markdown"],
   "rules": {
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
-    "vue/multi-word-component-names": "off"
+    "vue/multi-word-component-names": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-explicit-any": "off"
   },
   "overrides": [
     {
