--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@effortless-design/components",
+  "name": "@swift/components",
   "version": "1.0.0",
   "main": "index.ts",
   "license": "MIT"
