--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@effortless-design/utils",
+  "name": "@swift/utils",
   "main": "index.ts",
   "version": "1.0.0",
   "license": "MIT"
