build: compile module easing

--- a/docs/package.json
+++ b/docs/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@swift/components": "workspace:^1.0.0",
     "@swift/hooks": "workspace:^1.0.0",
+    "@swift/icons": "workspace:^1.0.0",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
