--- a/package.json
+++ b/package.json
@@ -2,10 +2,15 @@
   "scripts": {
     "play": "pnpm -F @pithy-ui/play play",
     "build": "pnpm -F @pithy-ui/build build",
-    "prepare": "husky install",
+    "build:main": "pnpm -F @pithy-ui/build build:main",
+    "build:icons": "pnpm -F @pithy-ui/build build:icons",
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "docs:preview": "vitepress preview docs",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run",
+    "prepare": "husky install"
   },
   "author": "Lrk",
   "license": "MIT",
@@ -15,20 +20,26 @@
     "@commitlint/config-conventional": "^17.6.1",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vue/test-utils": "^2.3.2",
     "eslint": "^8.39.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-markdown": "3.0.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "husky": "^8.0.3",
+    "jsdom": "^22.0.0",
     "lint-staged": "^13.2.1",
     "prettier": "^2.8.8",
     "sass": "^1.62.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.0.2",
+    "vite": "^4.3.0",
     "vitepress": "1.0.0-alpha.73",
-    "vue": "^3.2.47",
-    "vue-eslint-parser": "^9.1.1",
+    "vitest": "^0.31.1",
+    "vue": "^3.3.4",
+    "vue-eslint-parser": "^9.3.0",
     "vue-tsc": "^1.2.0"
   },
   "lint-staged": {
