--- a/packages/pithy-icons/package.json
+++ b/packages/pithy-icons/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "pithy-icons",
+  "name": "@pithy-ui/icons",
   "description": "Vue3 icons framework",
-  "version": "1.0.0",
+  "version": "1.0.2",
   "main": "index.ts",
   "author": "Lrk",
   "license": "MIT",
