--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "jsx": "preserve",
     "lib": ["DOM", "DOM.Iterable", "ES2018"],
-    "types": ["./types/vue-shims.d.ts", "./types/svg.d.ts"]
+    "types": ["./types/vue-shims.d.ts"]
   },
   "include": ["packages"]
 }
