--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   "plugins": ["vue", "@typescript-eslint", "markdown"],
   "rules": {
     "prettier/prettier": ["error", { "endOfLine": "auto" }],
+    "vue/one-component-per-file": "off",
     "vue/multi-word-component-names": "off",
     "@typescript-eslint/no-non-null-assertion": "off",
     "@typescript-eslint/no-explicit-any": "off"
