--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:run": "vitest run",
+    "coverage": "vitest run --coverage",
     "prepare": "husky install"
   },
   "author": "Lrk",
@@ -24,6 +25,7 @@
     "@typescript-eslint/parser": "^5.59.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vitejs/plugin-vue-jsx": "^3.0.1",
+    "@vitest/coverage-istanbul": "^0.32.2",
     "@vue/test-utils": "^2.3.2",
     "async-validator": "^4.2.5",
     "eslint": "^8.39.0",
