--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -13,10 +13,7 @@
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "removeComments": false,
-    "paths": {
-      "@pithy-ui/*": ["packages/*"]
-    }
+    "removeComments": false
   },
   "exclude": []
 }
